--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Java DSA Quiz | Master the Code</title>
+    <title>Java DSA Quiz | Loops, Arrays & Maps</title>
     <style>
         :root {
             --bg-color: #0d1117; /* GitHub Dark Dimmed */
@@ -278,13 +278,14 @@
         <div class="timer-bar"><div class="time-left" id="timer-bar"></div></div>
 
         <div class="screen active" id="start-screen">
-            <h1>Java DSA Revision</h1>
-            <p class="subtitle">Test your core Java knowledge.</p>
+            <h1>Java DSA Core</h1>
+            <p class="subtitle">Test your grasp on data structures & logic.</p>
             
             <ul class="topics-list">
-                <li><strong>Section 1:</strong> Java Basics & Compilation</li>
-                <li><strong>Section 2:</strong> Loops & Patterns</li>
-                <li><strong>Section 3:</strong> String Manipulation</li>
+                <li><strong>Topic 1:</strong> Loops & Control Flow</li>
+                <li><strong>Topic 2:</strong> Arrays & Matrix Logic</li>
+                <li><strong>Topic 3:</strong> String Manipulation</li>
+                <li><strong>Topic 4:</strong> HashMaps & Hashing</li>
             </ul>
 
             <button class="btn btn-primary" onclick="startQuiz()">Start Challenge</button>
@@ -316,91 +317,95 @@
     <script>
         // --- Questions Data ---
         const questions = [
-            // --- Section 1: Basics ---
+            // --- TOPIC: LOOPS ---
             {
-                question: "Which component is responsible for converting Bytecode into Machine Code?",
-                options: ["JDK", "JVM", "JRE", "JIT Compiler"],
-                correct: 1 // JVM (uses Interpreter/JIT)
+                question: "What is the output of this loop?",
+                code: "for (int i = 0; i < 5; i += 2) {\n  System.out.print(i + \" \");\n}",
+                options: ["0 1 2 3 4", "0 2 4", "0 2 4 6", "Infinite Loop"],
+                correct: 1 // 0, then 2, then 4. Next is 6 which fails i<5
             },
             {
-                question: "Why is Java preferred for DSA compared to C++ in some enterprise interviews?",
-                options: ["It is faster than C++", "It has built-in Garbage Collection", "It supports pointers directly", "It does not support OOP"],
-                correct: 1
-            },
-            {
-                question: "What will be the output of the following?",
-                code: "System.out.println(10 + 20 + \"Java\");",
-                options: ["30Java", "1020Java", "Java30", "Error"],
-                correct: 0
-            },
-            {
-                question: "Which of the following is NOT a valid main method signature?",
-                options: ["public static void main(String[] args)", "static public void main(String[] args)", "public void static main(String[] args)", "public static void main(String... args)"],
-                correct: 2
-            },
-            {
-                question: "Identify the compilation error in this code snippet:",
-                code: "byte b = 50;\nb = b * 2;",
-                options: ["No error", "Type mismatch: cannot convert from int to byte", "Variable b not initialized", "Syntax error in multiplication"],
-                correct: 1
-            },
-
-            // --- Section 2: Loops ---
-            {
-                question: "What is the output of the following loop?",
-                code: "for(int i=1; i<5; i+=2) {\n  System.out.print(i + \" \");\n}",
-                options: ["1 2 3 4 5", "1 3", "1 3 5", "Infinite Loop"],
-                correct: 1
-            },
-            {
-                question: "Which loop is best guaranteed to execute at least once?",
-                options: ["for loop", "while loop", "do-while loop", "for-each loop"],
+                question: "Which statement skips the current iteration and moves to the next one?",
+                options: ["break", "return", "continue", "exit"],
                 correct: 2
             },
             {
                 question: "Predict the output:",
-                code: "int x = 0;\nwhile(x++ < 3) {\n  System.out.print(x);\n}",
-                options: ["012", "123", "0123", "12"],
-                correct: 1
+                code: "int i = 1;\ndo {\n  System.out.print(i);\n  i++;\n} while(i < 1);",
+                options: ["No output", "1", "12", "Compilation Error"],
+                correct: 1 // Do-while runs at least once
             },
             {
-                question: "To print the pattern: 1, 1 2, 1 2 3, which inner loop condition is correct?",
-                code: "for(int i=1; i<=3; i++) {\n  for(__________) {\n    System.out.print(j + \" \");\n  }\n}",
-                options: ["int j=1; j<=3; j++", "int j=1; j<=i; j++", "int j=i; j<=3; j++", "int j=1; j<i; j++"],
-                correct: 1
-            },
-            {
-                question: "What happens if you use `for(;;)` in Java?",
-                options: ["Compilation Error", "Runtime Error", "Runs exactly once", "Infinite Loop"],
-                correct: 3
+                question: "What is the time complexity of a standard nested for-loop iterating 'n' times each?",
+                options: ["O(n)", "O(log n)", "O(n^2)", "O(1)"],
+                correct: 2
             },
 
-            // --- Section 3: Strings ---
+            // --- TOPIC: ARRAYS ---
             {
-                question: "In Java, Strings are immutable. What does this mean?",
-                options: ["They cannot be deleted", "They cannot be changed once created", "They reside in stack memory", "They are primitive data types"],
+                question: "What is the default value of an element in an `int` array (e.g., `new int[5]`)?",
+                options: ["null", "0", "-1", "Garbage value"],
                 correct: 1
             },
             {
-                question: "What is the output?",
-                code: "String s1 = \"Hello\";\nString s2 = new String(\"Hello\");\nSystem.out.print(s1 == s2);",
-                options: ["true", "false", "Hello", "Error"],
-                correct: 1
-            },
-            {
-                question: "Which method is used to find the length of a String?",
-                options: ["length", "length()", "size()", "getSize()"],
-                correct: 1
-            },
-            {
-                question: "What will `s.substring(1, 3)` return for String s = \"JAVA\"?",
-                options: ["AV", "JA", "AVA", "JAV"],
+                question: "How do you find the number of rows in a 2D array named `arr`?",
+                options: ["arr.length", "arr[0].length", "arr.size()", "arr.length()"],
                 correct: 0
             },
             {
-                question: "How do you check if a string is a palindrome efficiently?",
-                options: ["Compare s with reversed(s)", "Two pointer approach (start & end)", "Stack approach", "All of the above"],
-                correct: 3
+                question: "What happens if you try to access `arr[5]` in an array of size 5?",
+                options: ["Returns null", "Returns 0", "ArrayIndexOutOfBoundsException", "Compiler Error"],
+                correct: 2
+            },
+            {
+                question: "Which utility method prints an array as a readable string?",
+                options: ["System.out.print(arr)", "Arrays.toString(arr)", "arr.toString()", "String.valueOf(arr)"],
+                correct: 1
+            },
+
+            // --- TOPIC: STRINGS ---
+            {
+                question: "Predict the output:",
+                code: "String s1 = \"Java\";\nString s2 = new String(\"Java\");\nSystem.out.print(s1 == s2);",
+                options: ["true", "false", "Java", "Error"],
+                correct: 1 // Reference comparison (Heap vs Pool)
+            },
+            {
+                question: "Which class should be used for frequently modifying strings in a loop?",
+                options: ["String", "StringBuilder", "CharBuffer", "StringLiteral"],
+                correct: 1
+            },
+            {
+                question: "What is the result of `\"ABC\".substring(1)`?",
+                options: ["A", "B", "BC", "ABC"],
+                correct: 2 // Starts at index 1 to end
+            },
+            {
+                question: "How does `s.split(\",\")` return data?",
+                options: ["As a List<String>", "As a String[] array", "As a char[] array", "As a Stream"],
+                correct: 1
+            },
+
+            // --- TOPIC: HASHMAPS ---
+            {
+                question: "What happens if you put a Duplicate Key into a HashMap?",
+                options: ["Runtime Error", "Both keys are kept", "The old value is overwritten", "Compilation Error"],
+                correct: 2
+            },
+            {
+                question: "What is the average time complexity for `map.get(key)`?",
+                options: ["O(n)", "O(log n)", "O(1)", "O(n^2)"],
+                correct: 2
+            },
+            {
+                question: "Which method prevents overwriting if a key already exists?",
+                options: ["putIfAbsent()", "put()", "replace()", "add()"],
+                correct: 0
+            },
+            {
+                question: "Can a standard `HashMap` store a `null` key?",
+                options: ["Yes, one null key", "Yes, unlimited null keys", "No, throws Exception", "Only if Value is not null"],
+                correct: 0
             }
         ];
 
@@ -548,13 +553,13 @@
             finalScoreElement.textContent = `${score}/${questions.length}`;
             
             if (score <= 5) {
-                messageElement.textContent = "Revise Again 😅";
+                messageElement.textContent = "Keep Practicing 💻";
                 messageElement.style.color = "var(--error)";
             } else if (score <= 10) {
-                messageElement.textContent = "Good Try 👍";
+                messageElement.textContent = "Good Job! 🚀";
                 messageElement.style.color = "var(--primary)";
             } else {
-                messageElement.textContent = "Java Master 🔥";
+                messageElement.textContent = "DSA Expert! 🔥";
                 messageElement.style.color = "var(--accent)";
             }
         }
